<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Boulder Tracker</string>
    <string name="title_activity_main">Boulder Tracker</string>
    <string name="package_name">com.nzumbusch.bouldertracker</string>
    <string name="custom_url_scheme">com.nzumbusch.bouldertracker</string>
    <string name="shortcut_session_short">Session</string>
    <string name="shortcut_session_long">Start or resume a session</string>
    <string name="shortcut_quicklog_short">Quick log</string>
    <string name="shortcut_quicklog_long">Log pain, weight, a send or a benchmark</string>
    <string name="shortcut_metrics_short">Morning metrics</string>
    <string name="shortcut_metrics_long">Log sleep, HRV and resting HR</string>
</resources>
